--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "dragscroll": "0.0.8",
     "minibarjs": "^0.4.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
