--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "dragscroll": "0.0.8",
     "minibarjs": "^0.4.2",
     "vue": "^2.6.10",
+    "vue-autosuggest": "^2.0.4",
     "vue-router": "^3.1.3",
-    "vue-youtube": "^1.4.0"
+    "vue-youtube": "^1.4.0",
+    "vuedraggable": "^2.23.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
