--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@trevoreyre/autocomplete-vue": "^2.0.3",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "dragscroll": "0.0.8",
     "minibarjs": "^0.4.2",
     "vue": "^2.6.10",
-    "vue-autosuggest": "^2.0.4",
     "vue-router": "^3.1.3",
     "vue-youtube": "^1.4.0",
-    "vuedraggable": "^2.23.2"
+    "vuedraggable": "^2.23.2",
+    "youtube-autocomplete": "0.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
