--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "@trevoreyre/autocomplete-vue": "^2.0.3",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "dragscroll": "0.0.8",
+    "express": "^4.17.1",
     "minibarjs": "^0.4.2",
     "suggestion": "^2.1.2",
     "vue": "^2.6.10",
